@@ -11,8 +11,10 @@ import dk.dbc.dataio.jobstore.distributed.DependencyTracking;
 import dk.dbc.dataio.jobstore.distributed.DependencyTrackingRO;
 import dk.dbc.dataio.jobstore.distributed.StatusChangeEvent;
 import dk.dbc.dataio.jobstore.distributed.TrackingKey;
+import dk.dbc.dataio.jobstore.distributed.WaitFor;
 import dk.dbc.dataio.jobstore.distributed.hz.aggregator.BlockedCounter;
 import dk.dbc.dataio.jobstore.distributed.hz.aggregator.JobCounter;
+import dk.dbc.dataio.jobstore.distributed.hz.aggregator.LastTrackerMap;
 import dk.dbc.dataio.jobstore.distributed.hz.aggregator.SinkStatusCounter;
 import dk.dbc.dataio.jobstore.distributed.hz.aggregator.StatusCounter;
 import dk.dbc.dataio.jobstore.distributed.hz.processor.AddTerminationWaitingOn;
@@ -20,7 +22,6 @@ import dk.dbc.dataio.jobstore.distributed.hz.processor.RemoveWaitingOn;
 import dk.dbc.dataio.jobstore.distributed.hz.processor.UpdateCounter;
 import dk.dbc.dataio.jobstore.distributed.hz.processor.UpdatePriority;
 import dk.dbc.dataio.jobstore.distributed.hz.processor.UpdateStatus;
-import dk.dbc.dataio.jobstore.distributed.hz.query.ChunksToWaitFor;
 import dk.dbc.dataio.jobstore.distributed.hz.query.JobChunksWaitForKey;
 import dk.dbc.dataio.jobstore.distributed.hz.query.WaitingOn;
 import dk.dbc.dataio.jobstore.service.entity.ChunkEntity;
@@ -29,6 +30,8 @@ import jakarta.annotation.PreDestroy;
 import jakarta.ejb.DependsOn;
 import jakarta.ejb.Singleton;
 import jakarta.ejb.Startup;
+import jakarta.inject.Inject;
+import org.eclipse.microprofile.config.inject.ConfigProperty;
 import org.eclipse.microprofile.health.HealthCheck;
 import org.eclipse.microprofile.health.HealthCheckResponse;
 import org.eclipse.microprofile.health.Readiness;
@@ -38,10 +41,12 @@ import org.slf4j.LoggerFactory;
 
 import java.time.Duration;
 import java.time.Instant;
+import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.EnumMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -62,10 +67,14 @@ public class DependencyTrackingService {
     private static final Logger LOGGER = LoggerFactory.getLogger(DependencyTrackingService.class);
     private final IMap<TrackingKey, DependencyTracking> dependencyTracker = Hazelcast.Objects.DEPENDENCY_TRACKING.get();
     private final IMap<Integer, Map<ChunkSchedulingStatus, Integer>> countersMap = Hazelcast.Objects.SINK_STATUS.get();
+    private final IMap<WaitFor, TrackingKey> lastTracker = Hazelcast.Objects.LAST_TRACKER.get();
+    @Inject
+    @ConfigProperty(name = "WAIT_FOR_TRACKING_ENABLED", defaultValue = "false")
+    private boolean enableWaitForTracking;
 
     @PostConstruct
     public void config() {
-        init();
+        init(enableWaitForTracking);
     }
 
     @PreDestroy
@@ -76,10 +85,17 @@ public class DependencyTrackingService {
     }
 
     public DependencyTrackingService init() {
+        return init(false);
+    }
+
+    public DependencyTrackingService init(boolean enableWaitForTracking) {
+        this.enableWaitForTracking = enableWaitForTracking;
+        if(enableWaitForTracking && Hazelcast.isMaster()) lastTracker.putAll(rebuildTrackerMap());
         recountSinkStatus(Set.of());
         return this;
     }
 
+    @Timed
     public TrackingKey add(DependencyTracking entity) {
         int sinkId = entity.getSinkId();
         Set<TrackingKey> waitingOn = entity.getWaitingOn();
@@ -91,6 +107,15 @@ public class DependencyTrackingService {
         return key;
     }
 
+    @Timed
+    public void addAndBuildDependencies(DependencyTracking dt, String barrierMatchKey) {
+        Set<TrackingKey> chunksToWaitFor = enableWaitForTracking ? trackChunksToWaitFor(dt, barrierMatchKey) : findChunksToWaitFor(dt, barrierMatchKey);
+        dt.setWaitingOn(chunksToWaitFor);
+        add(dt);
+        boostPriorities(dt.getKey().getJobId(), chunksToWaitFor, dt.getPriority(), new HashSet<>());
+    }
+
+    @Timed
     public int capacity(int sinkId, ChunkSchedulingStatus status) {
         if(status.getMax() == null) throw new IllegalArgumentException("This status does not have a capacity");
         return status.getMax() - getCount(sinkId, status);
@@ -136,6 +161,7 @@ public class DependencyTrackingService {
         return dependencyTracker.values(p).stream().map(DependencyTrackingRO.class::cast);
     }
 
+    @Timed
     public DependencyTrackingRO get(TrackingKey key) {
         return dependencyTracker.get(key);
     }
@@ -153,14 +179,14 @@ public class DependencyTrackingService {
         return entries.size();
     }
 
+    @Timed
+    @SuppressWarnings("unchecked")
     public void removeJobId(int jobId) {
-        PredicateBuilder.EntryObject e = Predicates.newPredicateBuilder().getEntryObject();
-        @SuppressWarnings("unchecked")
-        Predicate<TrackingKey, DependencyTracking> p = e.key().get(JOB_ID).equal(jobId);
-        remove(p);
-        recountSinkStatus(Set.of());
+        remove(Predicates.newPredicateBuilder().getEntryObject().key().get(JOB_ID).equal(jobId));
+        if(enableWaitForTracking) lastTracker.removeAll(Predicates.newPredicateBuilder().getEntryObject().get(JOB_ID).equal(jobId));
     }
 
+    @Timed
     public void addToChunksToWaitFor(TrackingKey key, Set<TrackingKey> chunksToWaitFor) {
         Set<DependencyTrackingRO> allWOs = chunksToWaitFor.stream().filter(k -> !key.equals(k)).map(this::get).filter(Objects::nonNull).collect(Collectors.toSet());
         Set<TrackingKey> reducedWOs = optimizeDependencies(allWOs);
@@ -180,12 +206,18 @@ public class DependencyTrackingService {
                 .collect(Collectors.toSet());
     }
 
+    @Timed
     public StatusChangeEvent setStatus(TrackingKey key, ChunkSchedulingStatus status) {
         return setStatus(key, status, false);
     }
 
+    @Timed
     public StatusChangeEvent setValidatedStatus(TrackingKey key, ChunkSchedulingStatus status) {
         return setStatus(key, status, true);
+    }
+
+    public Map<WaitFor, TrackingKey> rebuildTrackerMap() {
+        return dependencyTracker.aggregate(new LastTrackerMap());
     }
 
     private StatusChangeEvent setStatus(TrackingKey key, ChunkSchedulingStatus newStatus, boolean validate) {
@@ -197,6 +229,8 @@ public class DependencyTrackingService {
     public void remove(TrackingKey key) {
         DependencyTracking removed = dependencyTracker.remove(key);
         countersMap.executeOnKey(removed.getSinkId(), new UpdateCounter(removed.getStatus(), -1));
+        PredicateBuilder.EntryObject o = Predicates.newPredicateBuilder().getEntryObject();
+        lastTracker.removeAll(o.get("jobId").equal(key.getJobId()).and(o.get("chunkId").equal(key.getChunkId())));
         LOGGER.info("Removed tracking key {} from dependency tracker", key.toChunkIdentifier());
     }
 
@@ -206,16 +240,21 @@ public class DependencyTrackingService {
         LOGGER.info("Removed tracking keys matched by predicate: {}", predicate);
     }
 
-    public void boostPriorities(Set<TrackingKey> keys, int priority) {
+    public void boostPriorities(int jobOrigin, Set<TrackingKey> keys, int priority, Set<TrackingKey> boostedKeys) {
         if (priority > Priority.LOW.getValue()) {
             try {
-                Map<TrackingKey, Set<TrackingKey>> map = dependencyTracker.executeOnKeys(keys, new UpdatePriority(priority));
-                Set<TrackingKey> waitingOn = map.values().stream().filter(Objects::nonNull).flatMap(Collection::stream).collect(Collectors.toSet());
-                if(!waitingOn.isEmpty()) boostPriorities(waitingOn, priority);
+                Set<TrackingKey> boostKeys = keys.stream().filter(tk -> tk.getJobId() != jobOrigin).collect(Collectors.toSet());
+                Map<TrackingKey, Set<TrackingKey>> map = dependencyTracker.executeOnKeys(boostKeys, new UpdatePriority(priority));
+                Set<TrackingKey> waitingOn = map.values().stream().filter(Objects::nonNull).flatMap(Collection::stream).filter(boostedKeys::add).collect(Collectors.toSet());
+                if(!waitingOn.isEmpty()) boostPriorities(jobOrigin, waitingOn, priority, boostedKeys);
             } catch (Exception e) {
                 LOGGER.error("Got exception while boosting key", e);
             }
         }
+    }
+
+    public Map<WaitFor, TrackingKey> getLastTrackerMapSnapshot() {
+        return lastTracker.entrySet().stream().collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
     }
 
     public void reload() {
@@ -259,10 +298,12 @@ public class DependencyTrackingService {
         return dependencyTracker.aggregate(new BlockedCounter());
     }
 
+    @Timed
     public Collection<DependencyTracking> findDependencies(ChunkSchedulingStatus status, Integer sinkId, Integer limit) {
         return dependencyTracker.values(makeDependencyPredicate(status, sinkId, limit));
     }
 
+    @Timed
     public Set<TrackingKey> find(ChunkSchedulingStatus status, Integer sinkId, Integer limit) {
         return dependencyTracker.keySet(makeDependencyPredicate(status, sinkId, limit));
     }
@@ -276,6 +317,7 @@ public class DependencyTrackingService {
         return Predicates.pagingPredicate(p, limit == null ? Integer.MAX_VALUE : limit);
     }
 
+    @Timed
     public List<TrackingKey> findChunksWaitingForMe(TrackingKey key, int sinkId) {
         return dependencyTracker.keySet(new WaitingOn(sinkId, key)).stream()
                 .sorted(Comparator.comparing(TrackingKey::getJobId).thenComparing(TrackingKey::getChunkId))
@@ -291,6 +333,7 @@ public class DependencyTrackingService {
      * @param waitForKey dataSetID
      * @return Returns List of Chunks To wait for.
      */
+    @Timed
     public Set<TrackingKey> findJobBarrier(int sinkId, int jobId, Set<String> waitForKey) {
         return dependencyTracker.keySet(new JobChunksWaitForKey(sinkId, jobId, waitForKey));
     }
@@ -311,6 +354,15 @@ public class DependencyTrackingService {
         return deps.stream().flatMap(this::checkBlocks).collect(Collectors.toSet());
     }
 
+    public Set<TrackingKey> trackChunksToWaitFor(DependencyTracking dt, String barrierMatchKey) {
+        Set<WaitFor> waitFors = barrierMatchKey == null ?
+                dt.getWaitFor() :
+                Stream.concat(dt.getWaitFor().stream(), Stream.of(new WaitFor(dt.getSinkId(), dt.getSubmitter(), barrierMatchKey))).collect(Collectors.toSet());
+        Set<TrackingKey> result = waitFors.stream().map(lastTracker::get).filter(Objects::nonNull).collect(Collectors.toSet());
+        waitFors.forEach(wf -> lastTracker.put(wf, dt.getKey()));
+        return result;
+    }
+
     /**
      * Finds chunks matching keys in given dependency tracking entity
      * and given barrier match key
@@ -320,11 +372,11 @@ public class DependencyTrackingService {
      * @return Returns set of chunks to wait for.
      */
     public Set<TrackingKey> findChunksToWaitFor(DependencyTracking entity, String barrierMatchKey) {
-        if (entity.getMatchKeys().isEmpty() && barrierMatchKey == null) {
-            return Collections.emptySet();
-        }
-        ChunksToWaitFor query = new ChunksToWaitFor(entity.getSinkId(), entity.getSubmitter(), entity.getHashes(), barrierMatchKey);
-        Collection<DependencyTracking> values = dependencyTracker.values(query);
+        if (entity.getMatchKeys().isEmpty() && barrierMatchKey == null) return Set.of();
+        WaitFor[] waitFor = barrierMatchKey == null ? entity.getWaitFor().toArray(WaitFor[]::new) :
+                Stream.concat(entity.getWaitFor().stream(), Stream.of(new WaitFor(entity.getSinkId(), entity.getSubmitter(), barrierMatchKey))).toArray(WaitFor[]::new);
+        Predicate<TrackingKey, DependencyTracking> query = Predicates.in("waitFor[any]", waitFor);
+        Collection<DependencyTracking> values = new ArrayList<>(dependencyTracker.values(query));
         return optimizeDependencies(values);
     }
 
@@ -350,7 +402,7 @@ public class DependencyTrackingService {
     private Stream<TrackingKey> checkBlocks(DependencyTracking dt) {
         boolean unblock = dt.getWaitingOn().stream().anyMatch(d -> !dependencyTracker.containsKey(d));
         if(unblock) {
-            dt.setWaitingOn(dt.getWaitingOn().stream().filter(dependencyTracker::containsKey).collect(Collectors.toList()));
+            dt.setWaitingOn(dt.getWaitingOn().stream().filter(dependencyTracker::containsKey).collect(Collectors.toSet()));
             if(dt.getWaitingOn().isEmpty()) dt.setStatus(ChunkSchedulingStatus.QUEUED_FOR_PROCESSING);
             dependencyTracker.set(dt.getKey(), dt);
             return Stream.of(dt.getKey());
